--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-<p>ZAINE SMART</p>
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title>WHISKERS</title>
+    </head>
+
+    <body>
+        <header>
+            <h1>WHISKERS</h1>
+                <section>
+                    <img src="Whiskers/whiskersFRONT.JPG" alt="a belt buckle" />
+                    <figcaption>cover page</figcaption>
+                </section>
+        </header>
+            
+
+        <main>
+            <article>
+                <p> This is a story written by Angela Smart about her favorite childhood horse and some of their time together.</p>
+            <section>
+                <h2>My horse&#39;s real name was Mr. Stars, but we just called him Whiskers.</h2>
+                <img src="Whiskers/whiskersP1.JPG" alt="page one" />
+                <figcaption>page 1</figcaption>
+            </section>
+            <section>
+                <h2>He wasn&#39;t the most beautiful horse, but we loved him despite all the snickers.</h2>
+                <img src="Whiskers/whiskersP2.JPG" alt="page two" />
+                <figcaption>page 2</figcaption>
+            </section>
+            <section>
+                <h2>He was skinny and clumsy, his mane tangled and thin.</h2>
+                <img src="Whiskers/whiskersP3.JPG" alt="page three" />
+                <figcaption>page 3</figcaption>
+            </section>
+            <section>
+                <h2>But under his whiskery muzzle, he was confident, proud and always made me grin.</h2>
+                <img src="Whiskers/whiskersP4.JPG" alt="page four" />
+                <figcaption>page 4</figcaption>
+            </section>
+            <section>
+                <h2>We cleaned him up, untangled his hair and gave him plenty to eat. 
+                <br>We even trimmed his ears and mouth and put shoes upon his feet.</h2>
+                <img src="Whiskers/whiskersP5.JPG" alt="page five" />
+                <figcaption>page 5</figcaption>
+            </section>
+            <section>
+                <h2>He competed with the finest horses, and we did the best we could.</h2>
+                <img src="Whiskers/whiskersP6.JPG" alt="page six" />
+                <figcaption>page 6</figcaption>
+            </section>
+            <section>
+                <h2>Sometimes we even won a ribbon, though others doubted we would.</h2>
+                <img src="Whiskers/whiskersP7.JPG" alt="page seven" />
+                <figcaption>page 7</figcaption>
+            </section>
+            <section>
+                <h2>He did funny things, that whiskery horse.  To not laugh at him was quite hard.</h2>
+                <img src="Whiskers/whiskersP8.JPG" alt="page eight" />
+                <figcaption>page 8</figcaption>
+            </section>
+            <section>
+                <h2>One morning, I found him munching the grass right in our family&#39;s front yard!</h2>
+                <img src="Whiskers/whiskersP9.JPG" alt="page nine" />
+                <figcaption>page 9</figcaption>
+            </section>
+            <section>
+                <h2>He found the way from his pasture in the country, to our house in the middle of town!</h2>
+                <img src="Whiskers/whiskersP10.JPG" alt="page ten" />
+                <figcaption>page 10</figcaption>
+            </section>
+            <section>
+                <h2>Yes, Whiskers was a horse who thought for himself and never let me down.</h2>
+                <img src="Whiskers/whiskersP11.JPG" alt="page eleven" />
+                <figcaption>page 11</figcaption>
+            </section>
+            <section>
+                <h2>Another time, he gladly drank my Uncle Jack&#39;s glass of iced tea.</h2>
+                <img src="Whiskers/whiskersP12.JPG" alt="page twelve" />
+                <figcaption>page 12</figcaption>
+            </section>
+            <section>
+                <h2>When the glass was empty we laughed and agreed he was quite a site to see!</h2>
+                <img src="Whiskers/whiskersP13.JPG" alt="page thirteen" />
+                <figcaption>page 13</figcaption>
+            </section>
+            <section>
+                <h2>The best part of Whiskers was never his looks, though I always thought he was fine. 
+                <br>No, the best part of him was no matter what, he was himself&#8211;a true one of a kind!</h2>
+                <img src="Whiskers/whiskersP14.JPG" alt="page fourteen" />
+                <figcaption>page 14</figcaption>
+            </section>
+        </article>
+    </main>
+
+        <footer>
+			<p>&copy; 2020 written by: Angela Smart    Illustrated by: Zaine Smart</p>
+		</footer>
+
+    </body>
+</html>
